RESOLVED FIXED228181
REGRESSION (r279992): Crashes under RemoteLayerBackingStore::applyBackingStoreToLayer() in macCatalyst
https://bugs.webkit.org/show_bug.cgi?id=228181
Summary REGRESSION (r279992): Crashes under RemoteLayerBackingStore::applyBackingStor...
Tim Horton
Reported 2021-07-22 02:57:34 PDT
REGRESSION (r279992): Crashes under RemoteLayerBackingStore::applyBackingStoreToLayer() in macCatalyst
Attachments
Patch (3.63 KB, patch)
2021-07-22 02:58 PDT, Tim Horton
no flags
Patch (3.62 KB, patch)
2021-07-22 10:34 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2021-07-22 02:58:11 PDT
Tim Horton
Comment 2 2021-07-22 02:58:15 PDT
Daniel Bates
Comment 3 2021-07-22 10:09:49 PDT
Comment on attachment 434002 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=434002&action=review Patch looks good. > Source/WebKit/Shared/RemoteLayerTree/RemoteLayerBackingStore.mm:429 > + RetainPtr<id> contents = nil; OK as-is. No change needed. Thoughts about removing the = nil and letting the default constructor initialize this?
Tim Horton
Comment 4 2021-07-22 10:24:28 PDT
(In reply to Daniel Bates from comment #3) > Comment on attachment 434002 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=434002&action=review > > Patch looks good. > > > Source/WebKit/Shared/RemoteLayerTree/RemoteLayerBackingStore.mm:429 > > + RetainPtr<id> contents = nil; > > OK as-is. No change needed. Thoughts about removing the = nil and letting > the default constructor initialize this? Heh, sure, certainly.
Tim Horton
Comment 5 2021-07-22 10:34:42 PDT
EWS
Comment 6 2021-07-22 11:04:10 PDT
Committed r280183 (239876@main): <https://commits.webkit.org/239876@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 434018 [details].
Note You need to log in before you can comment on or make changes to this bug.